@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Unify handling of SWATCH NONE between OperView and non-OperView. (caf)
+
 * Don't double-up server notices in the /RELS list. (caf)
 
 * Don't fire the SERVER_NOTICE hook more than once per notice. (caf)
